[package]
name = "arg-spoof"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Kernel",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_WindowsProgramming",
    "Win32_Storage_FileSystem",
    "Wdk_Foundation",
    "Wdk_System",
    "Wdk_System_SystemInformation",
    "Wdk_System_Threading",
]

[dependencies.winapi]
version = "0.3.9"
features = [
    "winbase",
    "processthreadsapi",
    "minwinbase",
    "winnt",
]

[dependencies]
dinvoke_rs = "0.1.2"
sysinfo = "0.29.11"
tokio = { version = "1.35.0", features = ["full"] }
rc4 = "0.1.0"